--- a/BacaLexia/StoryBoard/PilihV.storyboard
+++ b/BacaLexia/StoryBoard/PilihV.storyboard
@@ -17,32 +17,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="1194" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="Background " translatesAutoresizingMaskIntoConstraints="NO" id="0Tq-ce-zf2">
-                                <rect key="frame" x="-77" y="-115" width="1454" height="1379"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XPr-iK-HTo" userLabel="background">
+                                <rect key="frame" x="-12" y="0.0" width="1217" height="834"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="a" translatesAutoresizingMaskIntoConstraints="NO" id="iYo-YO-7T9">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="koalaPapan" translatesAutoresizingMaskIntoConstraints="NO" id="ZGf-zy-olI" userLabel="maskot">
+                                <rect key="frame" x="802" y="546" width="416" height="256"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="a" translatesAutoresizingMaskIntoConstraints="NO" id="uhw-61-OzB" userLabel="aHuruf">
                                 <rect key="frame" x="117" y="111" width="200" height="200"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="o" translatesAutoresizingMaskIntoConstraints="NO" id="YKr-jv-bsT">
-                                <rect key="frame" x="468" y="515" width="200" height="200"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="i" translatesAutoresizingMaskIntoConstraints="NO" id="Jc0-eY-KM5">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="i" translatesAutoresizingMaskIntoConstraints="NO" id="ktM-wt-O0e" userLabel="iHuruf">
                                 <rect key="frame" x="397" y="134" width="200" height="200"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="u" translatesAutoresizingMaskIntoConstraints="NO" id="uHm-26-4mV">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="u" translatesAutoresizingMaskIntoConstraints="NO" id="uau-gV-GRY" userLabel="uHuruf">
                                 <rect key="frame" x="144" y="446" width="200" height="200"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="e" translatesAutoresizingMaskIntoConstraints="NO" id="Ov2-uZ-QOh">
-                                <rect key="frame" x="687" y="302" width="200" height="200"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="o" translatesAutoresizingMaskIntoConstraints="NO" id="vlH-Sk-4Hf" userLabel="oHuruf">
+                                <rect key="frame" x="468" y="515" width="200" height="200"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="koalaPapan" translatesAutoresizingMaskIntoConstraints="NO" id="EI5-7o-b55">
-                                <rect key="frame" x="802" y="546" width="416" height="256"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="e" translatesAutoresizingMaskIntoConstraints="NO" id="nx5-Xr-S19" userLabel="eHuruf">
+                                <rect key="frame" x="687" y="302" width="200" height="200"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
@@ -50,11 +50,11 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <connections>
-                        <outlet property="aButton" destination="iYo-YO-7T9" id="iDB-UF-CxH"/>
-                        <outlet property="eButton" destination="Ov2-uZ-QOh" id="l0j-x3-Sf9"/>
-                        <outlet property="iButton" destination="Jc0-eY-KM5" id="Oij-6r-Wey"/>
-                        <outlet property="oButton" destination="YKr-jv-bsT" id="6tO-fx-tC4"/>
-                        <outlet property="uButton" destination="uHm-26-4mV" id="2uj-Oh-WDH"/>
+                        <outlet property="aButton" destination="uhw-61-OzB" id="3Xu-9B-8ug"/>
+                        <outlet property="eButton" destination="nx5-Xr-S19" id="bmO-30-oHV"/>
+                        <outlet property="iButton" destination="ktM-wt-O0e" id="kiI-6Q-sDR"/>
+                        <outlet property="oButton" destination="vlH-Sk-4Hf" id="STE-oz-OGj"/>
+                        <outlet property="uButton" destination="uau-gV-GRY" id="kAJ-iB-ax8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EQs-J6-7Sb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -63,7 +63,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Background " width="1454" height="1379"/>
         <image name="a" width="167" height="200"/>
         <image name="e" width="176" height="200"/>
         <image name="i" width="183" height="200"/>
