--- a/BacaLexia/StoryBoard/Ahuruf.storyboard
+++ b/BacaLexia/StoryBoard/Ahuruf.storyboard
@@ -21,12 +21,33 @@
                                 <rect key="frame" x="-77" y="-115" width="1454" height="1379"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="arrow3" translatesAutoresizingMaskIntoConstraints="NO" id="Ivh-92-rWR">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="arrow3" translatesAutoresizingMaskIntoConstraints="NO" id="Ivh-92-rWR" userLabel="ArrowButton">
                                 <rect key="frame" x="1" y="-1" width="151" height="96"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iTq-Cn-CYt">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iTq-Cn-CYt" userLabel="HurufImage">
                                 <rect key="frame" x="497" y="317" width="200" height="200"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="board" translatesAutoresizingMaskIntoConstraints="NO" id="15m-FT-DS4">
+                                <rect key="frame" x="260" y="-95" width="678" height="255"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wip-Z3-f6y">
+                                <rect key="frame" x="848" y="594" width="446" height="253"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button" image="koalaPapan"/>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qiM-YN-6xR">
+                                <rect key="frame" x="-55" y="594" width="1310" height="240"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="arrow1" translatesAutoresizingMaskIntoConstraints="NO" id="mjN-SZ-ISE">
+                                <rect key="frame" x="1126" y="324" width="82" height="187"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jKH-gI-9OP">
+                                <rect key="frame" x="1" y="340" width="82" height="187"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="xrz-Jg-rw5"/>
@@ -39,18 +60,27 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="PrevActivity" destination="jKH-gI-9OP" id="788-nd-JIP"/>
                         <outlet property="arrowButton" destination="Ivh-92-rWR" id="5O3-wY-vOL"/>
+                        <outlet property="bantuanBoard" destination="qiM-YN-6xR" id="YPA-BM-Kev"/>
                         <outlet property="hurufImage" destination="iTq-Cn-CYt" id="Mtr-3y-ZA2"/>
+                        <outlet property="maskot" destination="Wip-Z3-f6y" id="QjX-rl-5h8"/>
+                        <outlet property="nameActivity" destination="15m-FT-DS4" id="XNd-tT-6bM"/>
+                        <outlet property="nameBoard" destination="15m-FT-DS4" id="GfR-JW-Ec9"/>
+                        <outlet property="nextActivity" destination="mjN-SZ-ISE" id="0Dv-LQ-LaU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vmy-ae-1kk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-160" y="19"/>
+            <point key="canvasLocation" x="-160.30150753768845" y="18.705035971223023"/>
         </scene>
     </scenes>
     <resources>
         <image name="Background " width="1454" height="1379"/>
+        <image name="arrow1" width="165" height="334"/>
         <image name="arrow3" width="151" height="96"/>
+        <image name="board" width="686" height="256"/>
+        <image name="koalaPapan" width="392" height="253"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
