--- a/BacaLexia/StoryBoard/MenulisA.storyboard
+++ b/BacaLexia/StoryBoard/MenulisA.storyboard
@@ -31,11 +31,11 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="board" id="GSC-0F-Rqa">
-                                <rect key="frame" x="256" y="-97" width="679" height="255"/>
+                                <rect key="frame" x="255" y="-97" width="679" height="255"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group 6boardbesar" id="tUn-22-AZB">
-                                <rect key="frame" x="215" y="151" width="761" height="423"/>
+                                <rect key="frame" x="215" y="151" width="760" height="423"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group 10Koala" id="Q29-2C-5DK">
@@ -46,8 +46,8 @@
                                     <outletCollection property="gestureRecognizers" destination="3vV-B1-4Ff" appends="YES" id="Udt-7y-csF"/>
                                 </connections>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="menulis" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ksS-MO-Qv4">
-                                <rect key="frame" x="432" y="34" width="331" height="102"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="menulis" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ksS-MO-Qv4">
+                                <rect key="frame" x="268" y="34" width="655" height="102"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="88"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -61,7 +61,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES"/>
                                 <subviews>
                                     <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Text Box Menulis" id="W33-a1-9Ed">
-                                        <rect key="frame" x="-12" y="-13" width="837" height="324"/>
+                                        <rect key="frame" x="-12" y="-13" width="836" height="324"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
                                     </imageView>
                                 </subviews>
@@ -80,7 +80,6 @@
                     <connections>
                         <outlet property="KoalaBtn" destination="Q29-2C-5DK" id="YCu-Gk-RNz"/>
                         <outlet property="TextBantuan" destination="W33-a1-9Ed" id="cKH-hY-b9N"/>
-                        <outlet property="hurufA" destination="OpL-ms-Y4A" id="gqk-rw-cPH"/>
                         <outlet property="hurufImage" destination="OpL-ms-Y4A" id="5hZ-RE-jOZ"/>
                     </connections>
                 </viewController>
