konsonan tampilan huruf, backArrow

--- a/BacaLexia/StoryBoard/Ahuruf.storyboard
+++ b/BacaLexia/StoryBoard/Ahuruf.storyboard
@@ -61,7 +61,7 @@
                     </view>
                     <connections>
                         <outlet property="PrevActivity" destination="jKH-gI-9OP" id="788-nd-JIP"/>
-                        <outlet property="arrowButton" destination="Ivh-92-rWR" id="5O3-wY-vOL"/>
+                        <outlet property="arrowButton" destination="Ivh-92-rWR" id="OrF-og-AUZ"/>
                         <outlet property="background" destination="moh-LS-3Lo" id="7h1-1s-L1N"/>
                         <outlet property="bantuanBoard" destination="qiM-YN-6xR" id="YPA-BM-Kev"/>
                         <outlet property="hurufImage" destination="iTq-Cn-CYt" id="Mtr-3y-ZA2"/>
