--- a/BacaLexia/StoryBoard/Main.storyboard
+++ b/BacaLexia/StoryBoard/Main.storyboard
@@ -17,6 +17,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="1194" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Background " translatesAutoresizingMaskIntoConstraints="NO" id="OAL-57-JL3">
+                                <rect key="frame" x="-77" y="-115" width="1454" height="1379"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Vocal" translatesAutoresizingMaskIntoConstraints="NO" id="AU3-P5-Aad">
                                 <rect key="frame" x="61" y="130" width="424" height="416"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -25,23 +29,37 @@
                                 <rect key="frame" x="551" y="189" width="424" height="416"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fwR-86-mFg">
+                                <rect key="frame" x="0.0" y="706" width="1194" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="liR-Zj-BMm">
+                                <rect key="frame" x="800" y="594" width="446" height="253"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button" image="koalaPapan"/>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="kuT-4G-HYH"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <connections>
+                        <outlet property="background" destination="OAL-57-JL3" id="p3k-sO-Ynu"/>
+                        <outlet property="bantuanBoard" destination="fwR-86-mFg" id="n3Z-6f-MHY"/>
                         <outlet property="konsonanButton" destination="zKc-1B-sN9" id="zLH-Kq-q2O"/>
+                        <outlet property="maskot" destination="liR-Zj-BMm" id="xNz-v4-e5i"/>
                         <outlet property="vocalButton" destination="AU3-P5-Aad" id="HlT-pg-Pqf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iwh-zi-wl8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-316" y="38"/>
+            <point key="canvasLocation" x="-316.08040201005025" y="37.410071942446045"/>
         </scene>
     </scenes>
     <resources>
+        <image name="Background " width="1454" height="1379"/>
         <image name="Konsonan" width="420" height="420"/>
         <image name="Vocal" width="420" height="420"/>
+        <image name="koalaPapan" width="392" height="253"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
