--- a/BacaLexia/StoryBoard/Main.storyboard
+++ b/BacaLexia/StoryBoard/Main.storyboard
@@ -34,10 +34,18 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="liR-Zj-BMm">
-                                <rect key="frame" x="800" y="594" width="446" height="253"/>
+                                <rect key="frame" x="789" y="606" width="468" height="229"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button" image="koalaPapan"/>
+                                <state key="normal" title="Button" image="koala"/>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EpD-Ir-Lnl">
+                                <rect key="frame" x="76" y="96" width="1060" height="675"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JJn-Wd-Pvp">
+                                <rect key="frame" x="1071" y="96" width="65" height="68"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="kuT-4G-HYH"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -47,7 +55,9 @@
                         <outlet property="bantuanBoard" destination="fwR-86-mFg" id="n3Z-6f-MHY"/>
                         <outlet property="konsonanButton" destination="zKc-1B-sN9" id="zLH-Kq-q2O"/>
                         <outlet property="maskot" destination="liR-Zj-BMm" id="xNz-v4-e5i"/>
+                        <outlet property="panduanMain" destination="EpD-Ir-Lnl" id="Is7-jh-68P"/>
                         <outlet property="vocalButton" destination="AU3-P5-Aad" id="HlT-pg-Pqf"/>
+                        <outlet property="xxButton" destination="JJn-Wd-Pvp" id="iFB-DT-3zo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iwh-zi-wl8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -59,7 +69,7 @@
         <image name="Background " width="1454" height="1379"/>
         <image name="Konsonan" width="420" height="420"/>
         <image name="Vocal" width="420" height="420"/>
-        <image name="koalaPapan" width="392" height="253"/>
+        <image name="koala" width="414" height="229"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
