--- a/BacaLexia/StoryBoard/PilihKons.storyboard
+++ b/BacaLexia/StoryBoard/PilihKons.storyboard
@@ -17,8 +17,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="1194" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dv6-bk-bxc">
-                                <rect key="frame" x="0.0" y="0.0" width="1194" height="834"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Background " translatesAutoresizingMaskIntoConstraints="NO" id="dv6-bk-bxc">
+                                <rect key="frame" x="-77" y="-115" width="1454" height="1393"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="b" translatesAutoresizingMaskIntoConstraints="NO" id="tWC-WH-cxy">
@@ -65,30 +65,37 @@
                                 <rect key="frame" x="327" y="317" width="200" height="200"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fQ0-Fx-Ilm">
-                                <rect key="frame" x="805" y="581" width="446" height="253"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button" image="koalaPapan"/>
-                            </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="arrow3" translatesAutoresizingMaskIntoConstraints="NO" id="j1W-4K-i4a">
                                 <rect key="frame" x="0.0" y="0.0" width="151" height="96"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="arrow1" translatesAutoresizingMaskIntoConstraints="NO" id="BBU-PR-5Iz">
-                                <rect key="frame" x="1112" y="349" width="82" height="187"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="arrow1" translatesAutoresizingMaskIntoConstraints="NO" id="BBU-PR-5Iz">
+                                <rect key="frame" x="1112" y="349" width="82" height="82"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4Wb-RH-1Bu">
-                                <rect key="frame" x="0.0" y="349" width="82" height="187"/>
+                                <rect key="frame" x="0.0" y="349" width="82" height="82"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rBR-jH-hCw">
-                                <rect key="frame" x="0.0" y="594" width="1194" height="240"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rBR-jH-hCw">
+                                <rect key="frame" x="0.0" y="640" width="1194" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="5ex-R4-wti"/>
+                                    <constraint firstAttribute="width" constant="1194" id="UzQ-4k-bXf"/>
+                                </constraints>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fQ0-Fx-Ilm">
+                                <rect key="frame" x="794" y="593" width="468" height="229"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button" image="koala"/>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="uh0-MU-2ii"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="rBR-jH-hCw" firstAttribute="leading" secondItem="uh0-MU-2ii" secondAttribute="leading" id="DZp-OJ-swQ"/>
+                            <constraint firstItem="rBR-jH-hCw" firstAttribute="top" secondItem="BBU-PR-5Iz" secondAttribute="bottom" constant="640" id="XCS-LY-LZX"/>
+                            <constraint firstItem="rBR-jH-hCw" firstAttribute="trailing" secondItem="uh0-MU-2ii" secondAttribute="trailing" id="rCb-7f-0vv"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="arrowButton" destination="j1W-4K-i4a" id="Tcv-ja-7r9"/>
@@ -116,20 +123,21 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Background " width="1454" height="1379"/>
         <image name="arrow1" width="165" height="334"/>
-        <image name="arrow3" width="151" height="96"/>
-        <image name="b" width="183" height="200"/>
-        <image name="c" width="178" height="200"/>
-        <image name="d" width="183" height="200"/>
-        <image name="f" width="183" height="200"/>
-        <image name="g" width="167" height="200"/>
-        <image name="h" width="183" height="200"/>
-        <image name="j" width="193" height="200"/>
-        <image name="k" width="183" height="200"/>
-        <image name="koalaPapan" width="392" height="253"/>
-        <image name="l" width="183" height="200"/>
-        <image name="m" width="193" height="200"/>
-        <image name="n" width="178" height="200"/>
+        <image name="arrow3" width="110" height="110"/>
+        <image name="b" width="2326" height="2326"/>
+        <image name="c" width="2326" height="2326"/>
+        <image name="d" width="2326" height="2326"/>
+        <image name="f" width="2326" height="2326"/>
+        <image name="g" width="2326" height="2326"/>
+        <image name="h" width="2326" height="2326"/>
+        <image name="j" width="2326" height="2326"/>
+        <image name="k" width="2326" height="2326"/>
+        <image name="koala" width="414" height="229"/>
+        <image name="l" width="2326" height="2326"/>
+        <image name="m" width="2326" height="2326"/>
+        <image name="n" width="2326" height="2326"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
