--- a/BacaLexia/StoryBoard/PilihV.storyboard
+++ b/BacaLexia/StoryBoard/PilihV.storyboard
@@ -17,8 +17,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="1194" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XPr-iK-HTo" userLabel="background">
-                                <rect key="frame" x="-12" y="0.0" width="1217" height="834"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Background " translatesAutoresizingMaskIntoConstraints="NO" id="XPr-iK-HTo" userLabel="background">
+                                <rect key="frame" x="-77" y="-115" width="1454" height="1379"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="a" translatesAutoresizingMaskIntoConstraints="NO" id="uhw-61-OzB" userLabel="A">
@@ -29,9 +29,8 @@
                                 <rect key="frame" x="397" y="134" width="200" height="200"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="u" translatesAutoresizingMaskIntoConstraints="NO" id="uau-gV-GRY" userLabel="U">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="u" translatesAutoresizingMaskIntoConstraints="NO" id="uau-gV-GRY" userLabel="U">
                                 <rect key="frame" x="144" y="446" width="200" height="200"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="o" translatesAutoresizingMaskIntoConstraints="NO" id="vlH-Sk-4Hf" userLabel="O">
                                 <rect key="frame" x="468" y="515" width="200" height="200"/>
@@ -45,18 +44,27 @@
                                 <rect key="frame" x="0.0" y="0.0" width="151" height="96"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BDc-TH-E31">
-                                <rect key="frame" x="0.0" y="706" width="1194" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9iA-gD-eGy">
-                                <rect key="frame" x="805" y="581" width="446" height="253"/>
+                                <rect key="frame" x="794" y="593" width="468" height="229"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button" image="koalaPapan"/>
+                                <state key="normal" title="Button" image="koala"/>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BDc-TH-E31">
+                                <rect key="frame" x="0.0" y="634" width="1194" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="1194" id="KHw-mB-YOb"/>
+                                    <constraint firstAttribute="height" constant="200" id="een-5p-RPo"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="c2d-oT-ipg"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="BDc-TH-E31" firstAttribute="leading" secondItem="c2d-oT-ipg" secondAttribute="leading" id="4xk-Mu-YXx"/>
+                            <constraint firstAttribute="bottom" secondItem="BDc-TH-E31" secondAttribute="bottom" id="uGx-jq-ZQ9"/>
+                            <constraint firstItem="BDc-TH-E31" firstAttribute="top" secondItem="uau-gV-GRY" secondAttribute="bottom" constant="684" id="vm4-Du-uNC"/>
+                            <constraint firstItem="BDc-TH-E31" firstAttribute="trailing" secondItem="c2d-oT-ipg" secondAttribute="trailing" id="zsc-Z2-rnV"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="aButton" destination="uhw-61-OzB" id="3Xu-9B-8ug"/>
@@ -76,13 +84,14 @@
         </scene>
     </scenes>
     <resources>
-        <image name="a" width="167" height="200"/>
-        <image name="arrow3" width="151" height="96"/>
-        <image name="e" width="176" height="200"/>
-        <image name="i" width="183" height="200"/>
-        <image name="koalaPapan" width="392" height="253"/>
-        <image name="o" width="178" height="200"/>
-        <image name="u" width="200" height="200"/>
+        <image name="Background " width="1454" height="1379"/>
+        <image name="a" width="2336" height="2326"/>
+        <image name="arrow3" width="110" height="110"/>
+        <image name="e" width="2326" height="2326"/>
+        <image name="i" width="2326" height="2326"/>
+        <image name="koala" width="414" height="229"/>
+        <image name="o" width="2326" height="2326"/>
+        <image name="u" width="2326" height="2326"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
