--- a/BacaLexia/StoryBoard/Ahuruf.storyboard
+++ b/BacaLexia/StoryBoard/Ahuruf.storyboard
@@ -17,9 +17,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="1194" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="Background " translatesAutoresizingMaskIntoConstraints="NO" id="moh-LS-3Lo">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Background " translatesAutoresizingMaskIntoConstraints="NO" id="moh-LS-3Lo">
                                 <rect key="frame" x="-77" y="-115" width="1454" height="1379"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="arrow3" translatesAutoresizingMaskIntoConstraints="NO" id="Ivh-92-rWR" userLabel="ArrowButton">
                                 <rect key="frame" x="1" y="-1" width="110" height="110"/>
@@ -38,61 +37,52 @@
                                     <constraint firstAttribute="height" constant="400" id="MzQ-2j-dOv"/>
                                 </constraints>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qiM-YN-6xR">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qiM-YN-6xR">
                                 <rect key="frame" x="0.0" y="644" width="1194" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="3Gc-6f-nbC"/>
                                     <constraint firstAttribute="width" constant="1194" id="k1K-33-bkE"/>
                                 </constraints>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Arrow 1" translatesAutoresizingMaskIntoConstraints="NO" id="mjN-SZ-ISE">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Arrow 1" translatesAutoresizingMaskIntoConstraints="NO" id="mjN-SZ-ISE">
                                 <rect key="frame" x="1092" y="392" width="82" height="82"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="82" id="tcf-1t-fi6"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wip-Z3-f6y">
-                                <rect key="frame" x="848" y="593.5" width="468" height="253.5"/>
+                                <rect key="frame" x="848" y="634" width="468" height="213"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="213" id="ac6-fv-O70"/>
+                                </constraints>
                                 <state key="normal" title="Button" image="koala"/>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jKH-gI-9OP">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jKH-gI-9OP">
                                 <rect key="frame" x="29" y="392" width="82" height="82"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="187" id="2nv-ze-qTo"/>
-                                    <constraint firstAttribute="width" constant="82" id="CsV-QE-mcO"/>
-                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="xrz-Jg-rw5"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="15m-FT-DS4" firstAttribute="top" secondItem="4uK-qT-MYF" secondAttribute="topMargin" constant="-95" id="2JD-kx-kK3"/>
-                            <constraint firstItem="Wip-Z3-f6y" firstAttribute="top" secondItem="mjN-SZ-ISE" secondAttribute="bottom" constant="83" id="5Bm-Lr-TPJ"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="mjN-SZ-ISE" secondAttribute="trailing" constant="-34" id="5Ca-K1-Bcm"/>
-                            <constraint firstItem="mjN-SZ-ISE" firstAttribute="centerY" secondItem="4uK-qT-MYF" secondAttribute="centerY" id="80X-3q-NsO"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="Wip-Z3-f6y" secondAttribute="bottom" constant="-33" id="8Zi-RS-Ydv"/>
-                            <constraint firstItem="qiM-YN-6xR" firstAttribute="leading" secondItem="xrz-Jg-rw5" secondAttribute="leading" id="8zA-Dj-BVd"/>
-                            <constraint firstItem="Wip-Z3-f6y" firstAttribute="leading" secondItem="iTq-Cn-CYt" secondAttribute="trailing" constant="51" id="FGc-cb-XxT"/>
-                            <constraint firstItem="iTq-Cn-CYt" firstAttribute="top" secondItem="15m-FT-DS4" secondAttribute="bottom" constant="73" id="Ifi-9O-qnK"/>
-                            <constraint firstItem="15m-FT-DS4" firstAttribute="top" secondItem="4uK-qT-MYF" secondAttribute="topMargin" constant="-131" id="M9B-Ps-rvX"/>
-                            <constraint firstItem="iTq-Cn-CYt" firstAttribute="centerY" secondItem="jKH-gI-9OP" secondAttribute="centerY" id="P3H-KC-k3V"/>
-                            <constraint firstItem="qiM-YN-6xR" firstAttribute="top" secondItem="jKH-gI-9OP" secondAttribute="bottom" constant="67" id="PnH-6E-CQU"/>
-                            <constraint firstItem="iTq-Cn-CYt" firstAttribute="top" secondItem="15m-FT-DS4" secondAttribute="bottom" constant="73" id="RYi-1R-cM9"/>
-                            <constraint firstItem="jKH-gI-9OP" firstAttribute="leading" secondItem="Ivh-92-rWR" secondAttribute="leading" id="TrB-9R-6KA"/>
-                            <constraint firstItem="xrz-Jg-rw5" firstAttribute="trailing" secondItem="15m-FT-DS4" secondAttribute="trailing" constant="256" id="Tvf-sL-DmW"/>
-                            <constraint firstItem="iTq-Cn-CYt" firstAttribute="centerX" secondItem="4uK-qT-MYF" secondAttribute="centerX" id="Xdj-Im-sLc"/>
-                            <constraint firstItem="15m-FT-DS4" firstAttribute="top" secondItem="4uK-qT-MYF" secondAttribute="top" constant="-95" id="ahR-e6-aYE"/>
-                            <constraint firstItem="Wip-Z3-f6y" firstAttribute="top" secondItem="qiM-YN-6xR" secondAttribute="top" id="aie-yb-RfD"/>
-                            <constraint firstItem="xrz-Jg-rw5" firstAttribute="bottom" secondItem="iTq-Cn-CYt" secondAttribute="bottom" constant="181" id="bZW-f2-KRk"/>
-                            <constraint firstItem="xrz-Jg-rw5" firstAttribute="trailing" secondItem="15m-FT-DS4" secondAttribute="trailing" constant="256" id="eT5-s7-cH0"/>
-                            <constraint firstItem="15m-FT-DS4" firstAttribute="leading" secondItem="Ivh-92-rWR" secondAttribute="trailing" constant="149" id="frr-LV-dRI"/>
-                            <constraint firstItem="xrz-Jg-rw5" firstAttribute="trailing" secondItem="15m-FT-DS4" secondAttribute="trailing" constant="256" id="gsa-ir-Jen"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="qiM-YN-6xR" secondAttribute="bottom" constant="-20" id="iFu-Pc-KhO"/>
-                            <constraint firstItem="iTq-Cn-CYt" firstAttribute="top" secondItem="15m-FT-DS4" secondAttribute="bottom" constant="109" id="jj6-ne-YpC"/>
-                            <constraint firstItem="iTq-Cn-CYt" firstAttribute="centerX" secondItem="qiM-YN-6xR" secondAttribute="centerX" id="mPF-8W-EZk"/>
-                            <constraint firstItem="Ivh-92-rWR" firstAttribute="top" secondItem="4uK-qT-MYF" secondAttribute="topMargin" constant="-1" id="mUb-uu-VsT"/>
-                            <constraint firstItem="jKH-gI-9OP" firstAttribute="leading" secondItem="xrz-Jg-rw5" secondAttribute="leading" constant="1" id="pdO-wg-eaQ"/>
-                            <constraint firstItem="15m-FT-DS4" firstAttribute="leading" secondItem="Ivh-92-rWR" secondAttribute="trailing" constant="149" id="qPH-xv-XeF"/>
+                            <constraint firstItem="jKH-gI-9OP" firstAttribute="leading" secondItem="xrz-Jg-rw5" secondAttribute="leading" constant="29" id="CKH-ob-Nrd"/>
+                            <constraint firstItem="15m-FT-DS4" firstAttribute="top" secondItem="4uK-qT-MYF" secondAttribute="topMargin" constant="-95" id="CMD-BV-zMp"/>
+                            <constraint firstItem="mjN-SZ-ISE" firstAttribute="top" secondItem="xrz-Jg-rw5" secondAttribute="top" constant="392" id="E60-7j-tbR"/>
+                            <constraint firstItem="jKH-gI-9OP" firstAttribute="top" secondItem="mjN-SZ-ISE" secondAttribute="top" id="EJr-rB-7ht"/>
+                            <constraint firstItem="Ivh-92-rWR" firstAttribute="top" secondItem="4uK-qT-MYF" secondAttribute="topMargin" constant="-1" id="FsR-3X-Z2l"/>
+                            <constraint firstItem="jKH-gI-9OP" firstAttribute="centerY" secondItem="iTq-Cn-CYt" secondAttribute="centerY" id="KKq-dQ-exR"/>
+                            <constraint firstItem="Ivh-92-rWR" firstAttribute="leading" secondItem="xrz-Jg-rw5" secondAttribute="leading" constant="1" id="L3I-zd-dQh"/>
+                            <constraint firstItem="mjN-SZ-ISE" firstAttribute="trailing" secondItem="4uK-qT-MYF" secondAttribute="trailingMargin" id="NJe-jr-Ccx"/>
+                            <constraint firstItem="iTq-Cn-CYt" firstAttribute="top" secondItem="15m-FT-DS4" secondAttribute="bottom" constant="73" id="Tsj-s3-XOJ"/>
+                            <constraint firstItem="iTq-Cn-CYt" firstAttribute="centerX" secondItem="qiM-YN-6xR" secondAttribute="centerX" id="VbL-vK-n4N"/>
+                            <constraint firstItem="moh-LS-3Lo" firstAttribute="leading" secondItem="4uK-qT-MYF" secondAttribute="leadingMargin" constant="-97" id="WaI-hU-qRl"/>
+                            <constraint firstItem="moh-LS-3Lo" firstAttribute="top" secondItem="4uK-qT-MYF" secondAttribute="top" constant="-115" id="Ypj-Oe-71L"/>
+                            <constraint firstItem="jKH-gI-9OP" firstAttribute="bottom" secondItem="mjN-SZ-ISE" secondAttribute="bottom" id="iFu-br-lcT"/>
+                            <constraint firstItem="Wip-Z3-f6y" firstAttribute="leading" secondItem="xrz-Jg-rw5" secondAttribute="leading" constant="848" id="oqK-oC-1Np"/>
+                            <constraint firstItem="qiM-YN-6xR" firstAttribute="top" secondItem="iTq-Cn-CYt" secondAttribute="bottom" constant="11" id="rMa-eG-cjW"/>
+                            <constraint firstItem="iTq-Cn-CYt" firstAttribute="centerX" secondItem="4uK-qT-MYF" secondAttribute="centerX" id="tY8-4Z-bBf"/>
+                            <constraint firstItem="xrz-Jg-rw5" firstAttribute="trailing" secondItem="15m-FT-DS4" secondAttribute="trailing" constant="256" id="vak-ee-7De"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="Wip-Z3-f6y" secondAttribute="bottom" constant="-33" id="ydg-4M-U6P"/>
+                            <constraint firstItem="Ivh-92-rWR" firstAttribute="trailing" secondItem="jKH-gI-9OP" secondAttribute="trailing" id="zs6-GT-raA"/>
                         </constraints>
                     </view>
                     <connections>
